--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Matrix Calculator</title>
+    <title>MatriXpert</title>
   </head>
   <body class="h-full" >
     <div class="h-full" id="root"></div>
